--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
     id 'net.minecraftforge.gradle' version '5.1.+'
 }
 
-version = '1.0'
-group = 'com.creeperhivedude.creeperhive' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = '0.0.1-1.19.2'
+group = 'com.procellarum.creeperhive' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'creeperhive'
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
